Fix *.yaml Add GET sensor
